[gd_scene load_steps=8 format=3 uid="uid://col5nncce6km8"]

[ext_resource type="FontFile" uid="uid://ct4y3rnndcu5n" path="res://Assets/Fonts/Rubik/static/Rubik-Medium.ttf" id="1_owhd0"]
[ext_resource type="Script" path="res://Game/UI/input_rot.gd" id="1_syalr"]
[ext_resource type="Texture2D" uid="uid://ctsd7qtbixila" path="res://Assets/Graphics/GrabberLight.png" id="2_26s8m"]
[ext_resource type="Texture2D" uid="uid://bl8ipapgf1ctf" path="res://Assets/Graphics/GrabberDark.png" id="3_ffqrb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ss5r"]

[sub_resource type="Theme" id="Theme_deepy"]
LineEdit/styles/normal = SubResource("StyleBoxEmpty_7ss5r")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ke3hb"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[node name="Rot" type="HBoxContainer"]
script = ExtResource("1_syalr")

[node name="lbl" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/default_color = Color(0.745098, 0.745098, 0.745098, 1)
theme_override_fonts/normal_font = ExtResource("1_owhd0")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[right]EyeA Rotation:"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Rot" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_deepy")
theme_override_constants/separation = 10

[node name="slider" type="HSlider" parent="Rot"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("2_26s8m")
theme_override_icons/grabber_highlight = ExtResource("3_ffqrb")
theme_override_styles/slider = SubResource("StyleBoxFlat_ke3hb")
max_value = 297.0
tick_count = 3

[node name="LineEdit" type="SpinBox" parent="Rot"]
layout_mode = 2
update_on_text_changed = true
select_all_on_focus = true

[connection signal="drag_ended" from="Rot/slider" to="." method="_on_slider_drag_ended"]
[connection signal="value_changed" from="Rot/slider" to="." method="_on_slider_value_changed"]
[connection signal="value_changed" from="Rot/LineEdit" to="." method="_on_line_edit_value_changed"]
